# paper-copilot

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.en.md  README.md  TASKS.md  VISION.md  main.py  pyproject.toml
apps/macos/PaperCopilot/: AppModel.swift  Info.plist  PaperCopilotApp.swift
apps/macos/PaperCopilot.xcodeproj/: project.pbxproj
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: context-sidebar.tsx  markdown-report.tsx  report-history-sidebar.tsx  report-panels.tsx  report-view.tsx  research-composer.tsx
apps/web/lib/: chat-types.ts  report-adapter.ts
docs/: cli-issues.md  issues.md
docs/design/: agent-security.md  chat_first_research_copilot_plan.md  dashscope_text_embedding.md
docs/interview/: agent_harness_context_engineering.md  agent_interruption_recovery.md  agent_rollout_observability.md  agent_tool_approval_review.md  agent_tool_permission_and_injection_security.md  instruction_following_reliability.md  long_context_compaction.md  paper_research_agent_tool_design.md  prompt_traceability_and_eval_attribution.md
docs/stories/: 2026-04-27-model-selection-flash-vs-plus.md
eval/goldens/: 071b16f25117_contributions.json  071b16f25117_methods.json  2315fc6c2c0c_contributions.json  2315fc6c2c0c_methods.json  268d347e8a55_contributions.json  268d347e8a55_methods.json  2c03df8b48bf_contributions.json  2c03df8b48bf_methods.json  445d06b2ac99_contributions.json  445d06b2ac99_methods.json  65a9c7b0800c_contributions.json  65a9c7b0800c_methods.json
eval/retrieval/: queries.yaml
eval/suites/: approval_review.yaml  smoke.yaml
scripts/: build_macos_app.sh  build_macos_dmg.sh  eval_context_compaction.py  m9_cache_ab.py  observability_payloads.py  try_deep.py  try_skim.py
src/paper_copilot/agents/: approval_review.py  composer_library.py  composer_plan.py  composer_proposal.py  (+19 more)
tests/: test_smoke.py
tests/agents/: test_composer_proposal.py  test_context_compaction.py  test_context_compaction_loop.py  test_deep.py  test_extract_paper_tool.py  test_library_files_tool.py  test_link_related_papers_tool.py  test_loop.py  test_main.py  test_paper_copilot.py  test_read_paper_tool.py  test_related.py  test_research.py  test_tool_security.py  test_tool_validation.py
tests/api/: test_http.py
tests/chat/: test_jobs.py  test_router.py  test_runtime.py
tests/cli/: test_doctor.py  test_render.py
tests/eval/: test_assertions.py  test_embedding_cache.py  test_goldens.py  test_report.py  test_retrieval.py  test_runs.py
tests/fixtures/: deep_transformer_tool_input.json
tests/knowledge/: test_embeddings_store.py  test_fields_store.py  test_graph_store.py  test_hybrid_search.py  test_meta.py  test_sync.py
tests/observability/: test_reducer.py
tests/retrieval/: conftest.py  test_sections.py
tests/schemas/: test_paper.py
tests/session/: test_paths.py  test_recovery.py  test_store.py
tests/shared/: conftest.py  test_chunking.py  test_cost.py  test_errors.py  test_jsonschema.py  test_logging.py  test_pdf.py
(+82 files in other folders)
