[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-copilot"
version = "0.0.0"
description = "Personal paper reading copilot (local-first)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.4.0",
    "pymupdf>=1.24.0",
    "anthropic>=0.40.0",
    "rich>=15.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "sqlite-vec>=0.1.9",
    "flagembedding>=1.4.0",
    "numpy>=2.0",
]

[project.scripts]
paper-copilot = "paper_copilot.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_copilot"]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src"]

[[tool.mypy.overrides]]
module = ["sqlite_vec", "FlagEmbedding"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
