[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-copilot"
version = "0.0.0"
description = "Personal paper reading copilot (local-first)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.4.0",
    "pymupdf>=1.24.0",
    "httpx>=0.28.0",
    "websockets>=15.0",
    "python-dotenv>=1.0.0",
    "sqlite-vec>=0.1.9",
    "numpy>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
paper-copilot-runtime = "paper_copilot.api.runtime:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_copilot"]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src"]

[[tool.mypy.overrides]]
module = ["sqlite_vec", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
